<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/login_bg"
    tools:context=".ui.login.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        app:srcCompat="@drawable/login_img"
        android:contentDescription="@string/login_img"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edit_text"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/textLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:text="@string/title_login"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:alpha= "100"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0"
                tools:alpha="100"
                android:layout_marginTop="40dp"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:startIconDrawable="@drawable/baseline_email_24">

                <com.aplikasi.mystory.ui.customText.CustomEmail
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0"
                tools:alpha="100"
                android:layout_marginTop="20dp"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/baseline_lock_24">

                <com.aplikasi.mystory.ui.customText.CustomPassword
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:alpha="0"
                tools:alpha="100"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:text="@string/login"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/textSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0"
                tools:alpha="100"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notAcc"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/btn_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>