<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add_bg"
    tools:context=".ui.addStory.AddStoryActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"
        android:layout_centerInParent="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_add_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_add_story"
                app:srcCompat="@drawable/placeholder_image"
                android:contentDescription="@string/add_photo"/>

            <TextView
                android:id="@+id/tv_add_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/add_photo"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_gallery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_add" />

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:text="@string/gallery"
                app:layout_constraintEnd_toStartOf="@+id/btn_camera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_add_photo" />

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:text="@string/camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_gallery"
                app:layout_constraintTop_toBottomOf="@+id/tv_add_photo" />

            <TextView
                android:id="@+id/tv_add_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/add_story"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/iv_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_desc"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/edt_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_add_photo" />

            <EditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginHorizontal="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/custom_edit_text"
                android:gravity="start"
                android:hint="@string/desc"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLines="6"
                android:padding="8dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_upload"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="50dp"
                android:text="@string/upload"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
