<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="20dp"
    android:elevation="20dp"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:layout_marginHorizontal="24dp"
    app:cardCornerRadius="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/descStory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userImage"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/add_story"/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="117dp"
            android:layout_height="21dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="220dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageStory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/userImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/descStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/dateStory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageStory"
            tools:text="@string/descStory" />

        <TextView
            android:id="@+id/dateStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descStory"
            tools:text="@string/dateStory" />

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/imageStory"
            app:layout_constraintEnd_toStartOf="@+id/userName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_person_24"
            android:contentDescription="@string/username"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
